--- a/fetch.html
+++ b/fetch.html
@@ -5,7 +5,7 @@
 
     </article>
     <input type="button" value="fetch" onclick="
-      fetch('html').then(function(response){
+      fetch('1.html').then(function(response){
         response.text().then(function(text){
           document.querySelector('article').innerHTML = text;
         })
